NativeUI: Fix off-place input placeholder on Safari

--- a/src/ui_components/packages_native/components/filters_dropdown/native.filters.dropdown.style.less
+++ b/src/ui_components/packages_native/components/filters_dropdown/native.filters.dropdown.style.less
@@ -29,6 +29,7 @@
         text-overflow: ellipsis;
         background: transparent;
         border: none;
+        line-height: initial;
       }
     }
 
